// Vitest Snapshot v1

exports[`default::CreateHasData > has the expected shape 1`] = `
{
  "data": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::CreateHasTimestamps > has the expected shape 1`] = `
{
  "createdAt": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "regex",
              "regex": /\\^\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}\\(T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\(\\\\\\.\\\\d\\{3\\}\\)\\?\\)\\?Z\\?\\$/,
            },
          ],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "updatedAt": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "regex",
              "regex": /\\^\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}\\(T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\(\\\\\\.\\\\d\\{3\\}\\)\\?\\)\\?Z\\?\\$/,
            },
          ],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::CreatePost > has the expected shape 1`] = `
{
  "data": ZodString {
    "_def": {
      "checks": [],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "externalId": ZodOptional {
    "_def": {
      "innerType": ZodNumber {
        "_def": {
          "checks": [
            {
              "kind": "int",
              "message": undefined,
            },
            {
              "inclusive": true,
              "kind": "min",
              "message": undefined,
              "value": 0,
            },
            {
              "inclusive": true,
              "kind": "max",
              "message": undefined,
              "value": 65535,
            },
          ],
          "typeName": "ZodNumber",
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "max": [Function],
        "min": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "metadata": ZodOptional {
    "_def": {
      "innerType": ZodTuple {
        "_def": {
          "items": [
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": 0,
                  },
                ],
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "promise": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": 0,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 2147483647,
                  },
                ],
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "promise": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": 0,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 65535,
                  },
                ],
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "promise": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
            },
          ],
          "rest": null,
          "typeName": "ZodTuple",
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "moduleTest": ZodOptional {
    "_def": {
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "1",
            "2",
            "3",
            "4",
            "5",
          ],
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "nestingTest": ZodOptional {
    "_def": {
      "innerType": ZodArray {
        "_def": {
          "maxLength": null,
          "minLength": null,
          "type": ZodTuple {
            "_def": {
              "items": [
                ZodString {
                  "_def": {
                    "checks": [],
                    "typeName": "ZodString",
                  },
                  "_regex": [Function],
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nonempty": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "trim": [Function],
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": 0,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 65535,
                      },
                    ],
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": 0,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 2147483647,
                      },
                    ],
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": 0,
                      },
                    ],
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
                ZodArray {
                  "_def": {
                    "maxLength": null,
                    "minLength": null,
                    "type": ZodTuple {
                      "_def": {
                        "items": [
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": 0,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 65535,
                                },
                              ],
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "promise": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                          },
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": 0,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 2147483647,
                                },
                              ],
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "promise": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                          },
                        ],
                        "rest": null,
                        "typeName": "ZodTuple",
                      },
                      "and": [Function],
                      "array": [Function],
                      "default": [Function],
                      "describe": [Function],
                      "isNullable": [Function],
                      "isOptional": [Function],
                      "nullable": [Function],
                      "nullish": [Function],
                      "optional": [Function],
                      "or": [Function],
                      "parse": [Function],
                      "parseAsync": [Function],
                      "promise": [Function],
                      "refine": [Function],
                      "refinement": [Function],
                      "safeParse": [Function],
                      "safeParseAsync": [Function],
                      "spa": [Function],
                      "superRefine": [Function],
                      "transform": [Function],
                    },
                    "typeName": "ZodArray",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
              ],
              "rest": null,
              "typeName": "ZodTuple",
            },
            "and": [Function],
            "array": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "promise": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
          },
          "typeName": "ZodArray",
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "status": ZodOptional {
    "_def": {
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "Hidden",
            "Private",
            "Public",
            "Publish scheduled",
          ],
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "tags": ZodArray {
    "_def": {
      "maxLength": null,
      "minLength": null,
      "type": ZodString {
        "_def": {
          "checks": [],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodArray",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::CreatePost > has the expected shape 2`] = `
{
  "createdAt": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "regex",
              "regex": /\\^\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}\\(T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\(\\\\\\.\\\\d\\{3\\}\\)\\?\\)\\?Z\\?\\$/,
            },
          ],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "emailAddress": ZodString {
    "_def": {
      "checks": [
        {
          "kind": "regex",
          "regex": /\\^\\[a-zA-Z0-9\\.!#\\$%&'\\*\\+/=\\?\\^_\`\\{\\|\\}~-\\]\\+@\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\(\\?:\\\\\\.\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\)\\*\\$/,
        },
      ],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "name": ZodString {
    "_def": {
      "checks": [],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "password": ZodString {
    "_def": {
      "checks": [],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "updatedAt": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "regex",
              "regex": /\\^\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}\\(T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\(\\\\\\.\\\\d\\{3\\}\\)\\?\\)\\?Z\\?\\$/,
            },
          ],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::PostStatus > has the expected values 1`] = `
[
  "Hidden",
  "Private",
  "Public",
  "Publish scheduled",
]
`;

exports[`default::UpdateHasData > has the expected shape 1`] = `
{
  "data": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::UpdateHasTimestamps > has the expected shape 1`] = `
{
  "updatedAt": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "regex",
              "regex": /\\^\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}\\(T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\(\\\\\\.\\\\d\\{3\\}\\)\\?\\)\\?Z\\?\\$/,
            },
          ],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::UpdatePost > has the expected shape 1`] = `
{
  "data": ZodString {
    "_def": {
      "checks": [],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "externalId": ZodOptional {
    "_def": {
      "innerType": ZodNumber {
        "_def": {
          "checks": [
            {
              "kind": "int",
              "message": undefined,
            },
            {
              "inclusive": true,
              "kind": "min",
              "message": undefined,
              "value": 0,
            },
            {
              "inclusive": true,
              "kind": "max",
              "message": undefined,
              "value": 65535,
            },
          ],
          "typeName": "ZodNumber",
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "max": [Function],
        "min": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "step": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "metadata": ZodOptional {
    "_def": {
      "innerType": ZodTuple {
        "_def": {
          "items": [
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": 0,
                  },
                ],
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "promise": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": 0,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 2147483647,
                  },
                ],
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "promise": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
            },
            ZodNumber {
              "_def": {
                "checks": [
                  {
                    "kind": "int",
                    "message": undefined,
                  },
                  {
                    "inclusive": true,
                    "kind": "min",
                    "message": undefined,
                    "value": 0,
                  },
                  {
                    "inclusive": true,
                    "kind": "max",
                    "message": undefined,
                    "value": 65535,
                  },
                ],
                "typeName": "ZodNumber",
              },
              "and": [Function],
              "array": [Function],
              "default": [Function],
              "describe": [Function],
              "isNullable": [Function],
              "isOptional": [Function],
              "max": [Function],
              "min": [Function],
              "nullable": [Function],
              "nullish": [Function],
              "optional": [Function],
              "or": [Function],
              "parse": [Function],
              "parseAsync": [Function],
              "promise": [Function],
              "refine": [Function],
              "refinement": [Function],
              "safeParse": [Function],
              "safeParseAsync": [Function],
              "spa": [Function],
              "step": [Function],
              "superRefine": [Function],
              "transform": [Function],
            },
          ],
          "rest": null,
          "typeName": "ZodTuple",
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "moduleTest": ZodOptional {
    "_def": {
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "1",
            "2",
            "3",
            "4",
            "5",
          ],
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "nestingTest": ZodOptional {
    "_def": {
      "innerType": ZodArray {
        "_def": {
          "maxLength": null,
          "minLength": null,
          "type": ZodTuple {
            "_def": {
              "items": [
                ZodString {
                  "_def": {
                    "checks": [],
                    "typeName": "ZodString",
                  },
                  "_regex": [Function],
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nonempty": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                  "trim": [Function],
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": 0,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 65535,
                      },
                    ],
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": 0,
                      },
                      {
                        "inclusive": true,
                        "kind": "max",
                        "message": undefined,
                        "value": 2147483647,
                      },
                    ],
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
                ZodNumber {
                  "_def": {
                    "checks": [
                      {
                        "kind": "int",
                        "message": undefined,
                      },
                      {
                        "inclusive": true,
                        "kind": "min",
                        "message": undefined,
                        "value": 0,
                      },
                    ],
                    "typeName": "ZodNumber",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "max": [Function],
                  "min": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "step": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
                ZodArray {
                  "_def": {
                    "maxLength": null,
                    "minLength": null,
                    "type": ZodTuple {
                      "_def": {
                        "items": [
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": 0,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 65535,
                                },
                              ],
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "promise": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                          },
                          ZodNumber {
                            "_def": {
                              "checks": [
                                {
                                  "kind": "int",
                                  "message": undefined,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "min",
                                  "message": undefined,
                                  "value": 0,
                                },
                                {
                                  "inclusive": true,
                                  "kind": "max",
                                  "message": undefined,
                                  "value": 2147483647,
                                },
                              ],
                              "typeName": "ZodNumber",
                            },
                            "and": [Function],
                            "array": [Function],
                            "default": [Function],
                            "describe": [Function],
                            "isNullable": [Function],
                            "isOptional": [Function],
                            "max": [Function],
                            "min": [Function],
                            "nullable": [Function],
                            "nullish": [Function],
                            "optional": [Function],
                            "or": [Function],
                            "parse": [Function],
                            "parseAsync": [Function],
                            "promise": [Function],
                            "refine": [Function],
                            "refinement": [Function],
                            "safeParse": [Function],
                            "safeParseAsync": [Function],
                            "spa": [Function],
                            "step": [Function],
                            "superRefine": [Function],
                            "transform": [Function],
                          },
                        ],
                        "rest": null,
                        "typeName": "ZodTuple",
                      },
                      "and": [Function],
                      "array": [Function],
                      "default": [Function],
                      "describe": [Function],
                      "isNullable": [Function],
                      "isOptional": [Function],
                      "nullable": [Function],
                      "nullish": [Function],
                      "optional": [Function],
                      "or": [Function],
                      "parse": [Function],
                      "parseAsync": [Function],
                      "promise": [Function],
                      "refine": [Function],
                      "refinement": [Function],
                      "safeParse": [Function],
                      "safeParseAsync": [Function],
                      "spa": [Function],
                      "superRefine": [Function],
                      "transform": [Function],
                    },
                    "typeName": "ZodArray",
                  },
                  "and": [Function],
                  "array": [Function],
                  "default": [Function],
                  "describe": [Function],
                  "isNullable": [Function],
                  "isOptional": [Function],
                  "nullable": [Function],
                  "nullish": [Function],
                  "optional": [Function],
                  "or": [Function],
                  "parse": [Function],
                  "parseAsync": [Function],
                  "promise": [Function],
                  "refine": [Function],
                  "refinement": [Function],
                  "safeParse": [Function],
                  "safeParseAsync": [Function],
                  "spa": [Function],
                  "superRefine": [Function],
                  "transform": [Function],
                },
              ],
              "rest": null,
              "typeName": "ZodTuple",
            },
            "and": [Function],
            "array": [Function],
            "default": [Function],
            "describe": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "promise": [Function],
            "refine": [Function],
            "refinement": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "spa": [Function],
            "superRefine": [Function],
            "transform": [Function],
          },
          "typeName": "ZodArray",
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "status": ZodOptional {
    "_def": {
      "innerType": ZodEnum {
        "_def": {
          "typeName": "ZodEnum",
          "values": [
            "Hidden",
            "Private",
            "Public",
            "Publish scheduled",
          ],
        },
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
  "tags": ZodArray {
    "_def": {
      "maxLength": null,
      "minLength": null,
      "type": ZodString {
        "_def": {
          "checks": [],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodArray",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;

exports[`default::UpdateUser > has the expected shape 1`] = `
{
  "emailAddress": ZodString {
    "_def": {
      "checks": [
        {
          "kind": "regex",
          "regex": /\\^\\[a-zA-Z0-9\\.!#\\$%&'\\*\\+/=\\?\\^_\`\\{\\|\\}~-\\]\\+@\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\(\\?:\\\\\\.\\[a-zA-Z0-9\\]\\(\\?:\\[a-zA-Z0-9-\\]\\{0,61\\}\\[a-zA-Z0-9\\]\\)\\?\\)\\*\\$/,
        },
      ],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "name": ZodString {
    "_def": {
      "checks": [],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "password": ZodString {
    "_def": {
      "checks": [],
      "typeName": "ZodString",
    },
    "_regex": [Function],
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nonempty": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
    "trim": [Function],
  },
  "updatedAt": ZodOptional {
    "_def": {
      "innerType": ZodString {
        "_def": {
          "checks": [
            {
              "kind": "regex",
              "regex": /\\^\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}\\(T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\(\\\\\\.\\\\d\\{3\\}\\)\\?\\)\\?Z\\?\\$/,
            },
          ],
          "typeName": "ZodString",
        },
        "_regex": [Function],
        "and": [Function],
        "array": [Function],
        "default": [Function],
        "describe": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "nonempty": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "promise": [Function],
        "refine": [Function],
        "refinement": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "transform": [Function],
        "trim": [Function],
      },
      "typeName": "ZodOptional",
    },
    "and": [Function],
    "array": [Function],
    "default": [Function],
    "describe": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "promise": [Function],
    "refine": [Function],
    "refinement": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "transform": [Function],
  },
}
`;
